# Company

./: .gitignore  XY-Annotation.pro
XY-Annotation/: XY-Annotation.pro  XY-Annotation.qtvscr
XY-Annotation-new/: XY-Annotation.pro  XY-Annotation.pro.user.e23c969  XY-Annotation.qtvscr  XY-Annotation.sln  XY-Annotation.vcxproj  XY-Annotation.vcxproj.filters  yfunction.h
XY-Annotation-new/3rd/: thirdparty.pri
XY-Annotation-new/3rd/Hv/: Hv.pri
XY-Annotation-new/3rd/magic_enum/: ReadMe.md  magic_enum.hpp  magic_enum.pri
XY-Annotation-new/3rd/nlohmannJson/: fifo_map.hpp  json.pri
XY-Annotation-new/3rd/spdlog/: ylog.pri
XY-Annotation-new/3rd/yaml-cpp/: CYamlParser.cpp  CYamlParser.h  yaml-cpp.pri
XY-Annotation-new/res/Resource/: Resource.aps  Resource.rc
XY-Annotation-new/res/image/: image.qrc
XY-Annotation-new/src/: Src.pri
XY-Annotation-new/src/Util/: CYamlParser.cpp  CYamlParser.h  Util.pri
XY-Annotation-new/src/annotations/: Annotations.pri  annotationitem.h  segannotationitem.cpp  segannotationitem.h  shape.cc  shape.cpp  shape.h  shapefactory.h  ycurve.cpp  ycurve.h  yline.cc  yline.h  ypolygon.cc  ypolygon.cpp  ypolygon.h  ypolyline.cpp  ypolyline.h  yrectangle.cc  yrectangle.cpp  yrectangle.h
XY-Annotation-new/src/canvas/: Canvas.pri  canvas2d.cpp  canvas2d.h  canvasbase.cpp  canvasbase.h  document2d.cpp  document2d.h  documentbase.cpp  documentbase.h
XY-Annotation-new/src/controllers/: Controllers.pri  annotationcontainer.cpp  annotationcontainer.h  commands.cpp  commands.h  filemanager.cpp  filemanager.cpp.autosave  filemanager.h  jsonManager.cpp  jsonManager.h  labelmanager.cpp  labelmanager.h
XY-Annotation-new/src/global/: Global.pri  appdef.h  confile.h  main.cpp  singleton.hpp  ycommon.cpp  ycommon.h  ydefine.h
XY-Annotation-new/src/hv/: .gitignore
XY-Annotation-new/src/qt/: Qt.pri  glwidget.cpp  qtfunctions.h  qtheaders.h  qtstyles.h
XY-Annotation-new/src/ui/: CanvasView.cpp  CanvasView.h  ImageAdj.cpp  ImageAdj.h  Ui.pri  canvaswidget.cpp  canvaswidget.h  customlistwidget.cpp  customlistwidget.h  labeldialog.cpp  labeldialog.h  labellineedit.cpp  labellineedit.h  mainwindow.cpp  mainwindow.h  window.cpp  window.h  ydockwidget.cpp  ydockwidget.h
XY-Annotation-new/src/util/: hgl.h  yframe.cpp
XY-Annotation/3rd/spdlog/: ylog.cpp  ylog.h
XY-Annotation/res/image/: image.qrc
XY-Annotation/src/annotations/: annotationitem.cpp  annotationitem.h  segannotationitem.cpp  segannotationitem.h
XY-Annotation/src/canvas/: canvas2d.cpp  canvas2d.h  canvasbase.cpp  canvasbase.h
XY-Annotation/src/controllers/: annotationcontainer.cpp  annotationcontainer.h  commands.cpp  commands.h  filemanager.cpp  filemanager.h  labelmanager.cpp  labelmanager.h
XY-Annotation/src/global/: appdef.h  common.cpp  common.h  confile.h  main.cpp
XY-Annotation/src/qt/: custom_event_type.h  glwidget.h
XY-Annotation/src/ui/: labeldialog.cpp  labeldialog.h  mainwindow.cpp  mainwindow.h
XY-Annotation/src/util/: yframe.h
XYPlayer/3rd/: Thirdparty.pri
XYPlayer/Res/: file.qrc  img.qrc
XYPlayer/Src/: .qmake.stash  XYPlayer.pro  XYPlayer.pro.user-root  XYPlayer.pro.user.886835a  XYPlayer.pro.user.a9fb6f6
XYPlayer/build-root/: Makefile
decode/: XYPlayer全攻略：从入门到精通.pptx
decode/paramset/: algparam.cpp  algparam.h  algparam.ui  yjsonmanager.cpp  yjsonmanager.h
decode/shutter/: XS61X0-芯晟热成像ISP处理芯片.docx  XYZJ-QR-632 A0 快门驱动板_硬件_产品软硬件接口表_2024.1.25.xlsx  快门工装板方案设计.docx  快门工装驱动板__研发_方案评审表2024年1月17日.xlsx
decode/track_and_dis_code/: BYTETracker.cpp  BYTETracker.h  Define_struct.h  Mono_dis.cpp  Mono_dis.h  STrack.cpp  STrack.h  Track_offline_XD05A.cpp  common.h  dataType.h  kalmanFilter.cpp  kalmanFilter.h  lapjv.cpp  lapjv.h  utils.cpp
product_pc/include/: 3rdparty.pri
product_pc/src/: .qmake.stash  AutoProduce_resource.rc  MainWindow.pro
truthsystem/: CMakeLists.txt  GLYuvWidget.cpp  HttpClient.cpp  MapNew.cpp  MyQOpenglWidget.cpp  MyQOpenglWidget.h  StaticSignals.h  alg_cvtColor.cpp  alg_cvtColor.h  configinfo.h  constdef.h  define.h  inisettings.cpp  inisettings.h  initeractionbyhttp.cpp  initeractionbypcie.cpp  lidar_AT128.h  main.cpp  mathtypes.cpp  memcache.cpp  memcache.h  minboundingbox.cpp  miximage.h  nvs_result.h  nvshandler.cpp  nvshandler.h  qrc_source.cpp  qttoopencv.h  radar_ars408.cpp  radar_ars408.h  runcode.sh  source.qrc  source.qrc.depends  videoinfo.cpp  yuv2rgb.cpp  yuv2rgb.h  yuvplay.cpp
truthsystem/sensor_fusion/: datacollector.h  fusionalgorithm.h  sensormatch.h
truthsystem/src/: ConStatus.hpp  GLYuvWidget.h  HttpClient.h  MapNew.h  ReadMe.md  array.h  blockingqueue.h  common.h  configinfo.cpp  cremap.cpp  cremap.h  glmyyuvwidget.cpp  glmyyuvwidget.h  h264play.cpp  h264play.h  imu.cpp  imu.h  imuhandler.cpp  imuhandler.h  initeractionbyhttp.h  initeractionbypcie.h  lidar_AT128.cpp  log.cpp  log.h  mapping.cpp  mapping.h  mathtypes.h  minboundingbox.h  miximage.cpp  object.h  playfactory.h  qttoopencv.cpp  recorder.cpp  recorder.h  sharedmembuffer.cpp  sharedmembuffer.h  singleton.h  toolvector.cpp  toolvector.h  usbcan_alyst-II.hpp  (+6 more)
truthsystem/src/sensor_fusion/: datacollector.cpp  fusionalgorithm.cpp  sensordata.hpp  sensormatch.cpp
truthsystem/src/ui/: cameradiswidget.cpp  cameradiswidget.ui  cameraparamwidget.cpp  cameraparamwidget.ui  eventwidget.cpp  eventwidget.h  eventwidget.ui  imageWidget.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  matchfusionwidget.cpp  matchfusionwidget.h  playbackui.cpp  playbackui.h  playbackui.ui  plotviewer.ui  sensorfusion.h  systemparamwidget.cpp  systemparamwidget.h  systemsetwidget.h  transconfig.cpp  transconfig.h  transconfig.ui  videopaintlabel.h  videowidget.cpp
truthsystem/ui/: cameradiswidget.h  cameraparamwidget.h  imageWidget.h  lidarconnectwidget.cpp  lidarconnectwidget.h  lidarconnectwidget.ui  lidarviewerwidget.cpp  lidarviewerwidget.h  lidarviewerwidget.ui  plotviewer.cpp  plotviewer.h  recordconfig.cpp  recordconfig.h  recordconfig.ui  sensorfusion.cpp  systemparamwidget.ui  systemsetwidget.cpp  systemsetwidget.ui  videopaintlabel.cpp  videowidget.h  videowidget.ui
(+1134 files in other folders)
